--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "19.1.0",
     "sequelize": "^6.37.7",
     "sequelize-typescript": "^2.1.6",
-    "zod": "^4.0.15"
+    "zod": "^4.0.15",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
