--- a/package.json
+++ b/package.json
@@ -7,17 +7,23 @@
     "build": "next build",
     "start": "next start",
     "test": "jest",
-    "lint": "next lint"
-  },
-  "db": {
-    "force-sync": "tsx src/scripts/db/force-sync.ts",
-    "alter-sync": "tsx src/scripts/db/alter-sync.ts"
+    "lint": "next lint",
+    "db:force-sync": "tsx src/scripts/db/force-sync.ts",
+    "db:alter-sync": "tsx src/scripts/db/alter-sync.ts",
+    "db:seed-roles": "tsx src/scripts/db/seed-roles.ts"
   },
   "dependencies": {
+    "@iconify/react": "^6.0.0",
+    "@types/bcrypt": "^6.0.0",
     "@types/sequelize": "^4.28.20",
+    "bcrypt": "^6.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.540.0",
     "mysql2": "^3.14.3",
     "next": "15.4.6",
+    "odbc": "^2.4.9",
     "pg": "^8.16.3",
+    "pg-hstore": "^2.3.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "sequelize": "^6.37.7",
@@ -29,7 +35,9 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/jest": "^30.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
+    "@types/pg": "^8.15.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "dotenv": "^17.2.1",
