--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "test": "jest",
+    "test": "jest", 
     "lint": "next lint",
     "db:force-sync": "tsx src/scripts/db/force-sync.ts",
     "db:alter-sync": "tsx src/scripts/db/alter-sync.ts",
@@ -15,12 +15,16 @@
   "dependencies": {
     "@iconify/react": "^6.0.0",
     "@types/bcrypt": "^6.0.0",
+    "@types/geoip-lite": "^1.4.4",
     "@types/sequelize": "^4.28.20",
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.7.0",
+    "geoip-lite": "^1.4.10",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.540.0",
     "mysql2": "^3.14.3",
     "next": "15.4.6",
+    "nodemailer": "^7.0.5",
     "odbc": "^2.4.9",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
@@ -37,6 +41,7 @@
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.1",
     "@types/pg": "^8.15.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
