--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
   },
   "dependencies": {
     "@iconify/react": "^6.0.0",
+    "@neondatabase/serverless": "^1.0.1",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@stripe/react-stripe-js": "^4.0.2",
+    "@stripe/stripe-js": "^7.9.0",
     "@tanstack/react-query": "^5.85.9",
     "@types/bcrypt": "^6.0.0",
     "@types/geoip-lite": "^1.4.4",
@@ -47,6 +51,7 @@
     "redis": "^5.8.2",
     "sequelize": "^6.37.7",
     "sequelize-typescript": "^2.1.6",
+    "stripe": "^18.5.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.0.15",
     "zustand": "^5.0.7"
